- Fixed bugs when "Start page = ..." was present
- Added "Message height = ..." option
- Mail notification now distinguishes between new entry and updated entry
- Made "Allow <command> = <user>" work in localized versions
- Move whole thread when individual message is re-submitted
- Do not display commands which are not allowed for the current user

Version 2.2.1, released October 15th, 2002
==========================================

- elog program can now handle large attachments
- find result in threaded mode does not display messages multiple times

Version 2.2.0, released September 25th, 2002
============================================

- The default view of a logbook is now the page-wise listing of entries
- Added "Show last xxx" facility

Version 2.1.3, released September 16, 2002
==========================================

- Fixed wrong error "password file not found" if user doesn't exist
- Fixed double check boxes on select command for threaded display
- Ignore empty line in password files or lines without a ":"
- Fixed bug where wrong password caused login screen to re-appear
  even with correct password
- Don't display check box for edit with "Suppress email on edit = 1"
- Implemented "Deny <command>" option
- Fixed bug with config other user as admin user

Version 2.1.2, released September 12th, 2002
============================================

- Self registration now also works without guest menu commands
- Reversed up/down arrow to indicate sort order
- Added IP information to log file
- Added "Select" functionality
- Added ROptions for radio button options
- Added "Copy to" and "Move to" to specify certain logbooks
- Fixed problems with deleted logbooks
- Fixed bug that sorting did not work in page mode

Version 2.1.1, released August 13th, 2002
=========================================

- Describe self registration in doc
- Added "self register = 2,3" with automatic admin and user notification

Version 2.1.0, released August 9th, 2002