@@ -9,6 +9,8 @@ Version 2.2.2, released Nobember xxth, 2002
 - Made "Allow <command> = <user>" work in localized versions
 - Move whole thread when individual message is re-submitted
 - Do not display commands which are not allowed for the current user
+- All text files (preset text, welcome page, ...) can specified with an
+  absolute path if they start with "/" (or "\" under Windows)
 
 Version 2.2.1, released October 15th, 2002
 ==========================================
